# automata-2024-t2

./: .gitignore  COPYING  INSTRUCOES.md  README.md  pyproject.toml  tox.ini
.exercicio_zero/: configure
.exercicio_zero/rulesets/: auto_eval.json
.github/workflows/: grade.yml
examples/: 01-simples.txt  02-invalido.txt  03-invalido.txt  04-invalido.txt  05-invalido.txt  06-nfa.txt
features/: common_test.py  dfa.feature  environment.py  errors.feature  nfa.feature
features/steps/: errors_steps.py  nfa.py
src/: automata.py
