[project]
name = "automata-2024-t2"
description = "Trabalho T2 da disciplina Linguagens Formais, do curso de Ciência da Computação, da Universidade LaSalle Canoas."
readme = "README.md"
version = "1.04.2024"
requires-python = ">=3.11"
license = { file="COPYING" }

classifiers = [
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
   "black", "pylint", "flake8", "pydocstyle", "behave", "pytest"
]

[project.optional-dependencies]
tox = [ "tox" ]

[project.urls]
homepage = "https://github.com/rafasgj/automata-2024-t2"
repository = "https://github.com/rafasgj/automata-2024-t2"
issues = "https://github.com/rafasgj/automata-2024-t2/issues"
pull_requests = "https://github.com/rafasgj/automata-2024-t2/pulls"
discussions = "https://github.com/rafasgj/automata-2024-t2/discussions"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
# line-length = 79
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "."

# pylint configuration
[tool.pylint.'BASIC']
# max-line-length = 79
max-attributes = 10
disable = "W1514"
good-names = [
    "i", "j", "k", "x", "y"
]
